@@ -1,3 +1,7 @@
+2009-07-21  Oliver Hader  <oliver@typo3.org>
+
+	* Added feature: New hook 'createFile_initializeVariables' to initialize variabled before starting the processing
+
 2009-06-30  Oliver Hader  <oliver@typo3.org>
 
 	* Fixed bug: CLI debug output in processDirtyPages() does not contain directory name
